--- a/package.json
+++ b/package.json
@@ -187,10 +187,12 @@
     "phantomjs-polyfill": "^0.0.2",
     "phantomjs-prebuilt": "^2.1.14",
     "piping": "^1.0.0-rc.4",
+    "postcss-loader": "^2.0.5",
     "react-a11y": "^0.3.3",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.3",
     "react-to-html-webpack-plugin": "^2.2.0",
+    "react-transition-group": "^1.1.3",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
