--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "node-sass": "^4.5.0",
     "phantomjs-polyfill": "^0.0.2",
     "phantomjs-prebuilt": "^2.1.14",
-    "piping": "^1.0.0-rc.4",
+    "piping": "^0.3.0",
     "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.10",
     "react-a11y": "^0.3.3",
@@ -194,6 +194,7 @@
     "react-hot-loader": "^3.0.0-beta.3",
     "react-to-html-webpack-plugin": "^2.2.0",
     "react-transition-group": "^1.1.3",
+    "redux-async-connect": "^1.0.0-rc4",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
