--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "clean-css": "^4.0.5",
     "clean-webpack-plugin": "^0.1.15",
     "concurrently": "^3.3.0",
+    "cors": "^2.8.4",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.4.5",
